# cli-translator

./: .gitignore  README.md  main.py  pyproject.toml
tests/: functest.py
tests/export/: controller_test.py  repository_test.py
tests/translation/: client_test.py  controller_test.py  repository_test.py
translator/: config.py  func.py  main.py  model.py  render.py
translator/export/: csvwriter.py  export_controller.py  repository.py
translator/init/: init_controller.py  repository.py
translator/translation/: client.py  common.py  repository.py  translation_controller.py
